Bug 442435 - We can not find a way to translate "Add dock/panel" sub-items
Summary: We can not find a way to translate "Add dock/panel" sub-items
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Plasma
Component: application (show other bugs)
Version: 0.10.1
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-14 14:52 UTC by PK
Modified: 2021-09-16 09:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
items in sub-menu are not in the same language but in English (94.06 KB, image/jpeg)
2021-09-14 14:52 UTC, PK
Details
result of your actions! (120.85 KB, image/jpeg)
2021-09-16 04:42 UTC, PK
Details
the good screenshot (110.45 KB, image/jpeg)
2021-09-16 05:15 UTC, PK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PK 2021-09-14 14:52:45 UTC
Created attachment 141544 [details]
items in sub-menu are not in the same language but in English

SUMMARY
We have thoroughly reviewed the Dutch translation of Latte-Dock. But we stuble upon three items where there seem to be no possibility to translate.

STEPS TO REPRODUCE
1. right-click on latte dock/panel
2. then choose (in your language) "add new dock/panel"


OBSERVED RESULT

The sub-menu that opens is in English. We can find no way to translate this.


EXPECTED RESULT

The items in the sub-menu are in the same language as the rest.

Are we not searching well enough in the .po files? Or could this be a new feature that has yet no possibility to translate?
To be clearer I put in an attachment...


SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-34-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Celeron® J4105 CPU @ 1.50GHz
Memory: 7.4 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 600
ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2021-09-14 15:11:17 UTC
unfortunately there is no way to translate those yet.
Comment 2 PK 2021-09-14 15:25:37 UTC
thank you
Comment 3 Michail Vourlakos 2021-09-14 17:30:54 UTC
When I find some free time, I will try to work on this. If I feel confident that the proposed solution will work just fine with v0.10.x branch then I will merge that also.

In that case you can track this bug report and when such commit is merged then after one day you will be able to translate those three records.
Comment 4 Michail Vourlakos 2021-09-14 18:05:34 UTC
Git commit a480101ddf2e71cd3062c0d8536e2a0a59e1abf0 by Michail Vourlakos.
Committed on 14/09/2021 at 18:03.
Pushed by mvourlakos into branch 'v0.10'.

provide translations for dock panel templates

M  +16   -1    app/templates/templatesmanager.cpp

https://invent.kde.org/plasma/latte-dock/commit/a480101ddf2e71cd3062c0d8536e2a0a59e1abf0
Comment 5 Michail Vourlakos 2021-09-14 18:06:10 UTC
Git commit 53674a65e117a0c938237577fe5503090a9cab76 by Michail Vourlakos.
Committed on 14/09/2021 at 18:05.
Pushed by mvourlakos into branch 'master'.

provide translations for dock panel templates

M  +16   -1    app/templates/templatesmanager.cpp

https://invent.kde.org/plasma/latte-dock/commit/53674a65e117a0c938237577fe5503090a9cab76
Comment 6 Michail Vourlakos 2021-09-14 18:08:02 UTC
I think we are ok now, I believe in a day the new strings will be published. Feel free to test the solution and if everything is ok now.

I would like to have your confirmation that this is ok now before releasing version 0.10.3
Comment 7 PK 2021-09-16 04:42:01 UTC
Created attachment 141576 [details]
result of your actions!
Comment 8 PK 2021-09-16 05:14:45 UTC
I made a mistake and showed you a not-so-good screenshot. In reality it IS good. NEW attachment
Comment 9 PK 2021-09-16 05:15:35 UTC
Created attachment 141577 [details]
the good screenshot
Comment 10 Michail Vourlakos 2021-09-16 09:47:35 UTC
nice!

So now I will give one week time for more translators to catch up if they want and afterwards there will be a 0.10.3 version that will include the new translated strings.