provide translations for dock panel templates

BUG:442435